# OOP_lab7

./: CMakeLists.txt  main.cpp  temp.cpp
include/: bear.h  game_utils.h  npc.h  orc.h  squirrel.h
src/: bear.cpp  game_utils.cpp  npc.cpp  orc.cpp  squirrel.cpp
test/: tests.cpp
